oop_mro/tests/trybuild/fail_concrete_unimplemented.rs
use oop_mro::prelude::*;

oop_class! {
    class Shape {
        abstract virtual fn area(&self) -> usize;
    }
}

fn main() {}
